plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

ext {
    springCloudVersion = "2023.0.3"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

allprojects {
    group = 'org.example'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {


        // Common Dependencies
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        // Distributed Tracing
        implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
        implementation 'io.micrometer:micrometer-tracing-bridge-brave'
        implementation 'io.github.openfeign:feign-micrometer:13.3'
        if(!project.name.containsIgnoreCase("gateway")){
            implementation 'org.springframework.boot:spring-boot-starter-web'
        }
        // Conditional Dependencies
        if (project.name.equalsIgnoreCase("eureka-server")) {
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
        } else if (project.name.equalsIgnoreCase("config-server")) { //Eureka
            implementation 'org.springframework.cloud:spring-cloud-config-server'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
        } else if (project.name.equalsIgnoreCase("api-gateway")) { //API-Gateway
            implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'
            implementation 'org.keycloak:keycloak-admin-client:25.0.6'
            implementation 'org.springframework.boot:spring-boot-starter-security'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
            implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
            implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
            implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.springframework.boot:spring-boot-starter-webflux'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
        }else if (project.name.equalsIgnoreCase("task-service")) {
            implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'
            implementation 'org.keycloak:keycloak-admin-client:25.0.6'
            implementation 'org.springframework.boot:spring-boot-starter-security'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
            implementation 'org.springframework.boot:spring-boot-starter-aop'
            implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
            implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
            implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
            runtimeOnly 'org.postgresql:postgresql'
        } else if (project.name.equalsIgnoreCase("keycloak-admin-client")) {
            implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'
            implementation 'org.keycloak:keycloak-admin-client:25.0.6'
            implementation 'org.springframework.boot:spring-boot-starter-security'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
            implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
            implementation 'org.springframework.boot:spring-boot-starter-aop'
            implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
            implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
            implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.springframework.cloud:spring-cloud-starter-config'
            implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
